[gd_scene load_steps=18 format=3 uid="uid://drqdplnlajtue"]

[ext_resource type="Script" path="res://src/widgets/popup_rank.gd" id="1_3gm06"]
[ext_resource type="Texture2D" uid="uid://di0c62wqxxpxk" path="res://assets/textures/widgets/others/UIbg.png" id="2_11sh7"]
[ext_resource type="Texture2D" uid="uid://e7ympumej8ab" path="res://assets/textures/widgets/letters/letterR.png" id="3_bgxop"]
[ext_resource type="Texture2D" uid="uid://duxt4hwxkb58" path="res://assets/textures/widgets/letters/letterA.png" id="4_qv7sh"]
[ext_resource type="Texture2D" uid="uid://ntkwuab7qwvb" path="res://assets/textures/widgets/letters/letterN.png" id="5_shcom"]
[ext_resource type="Texture2D" uid="uid://cdubwalgg67a1" path="res://assets/textures/widgets/letters/letterK.png" id="6_u3dqc"]
[ext_resource type="Texture2D" uid="uid://dvp0plc638c1i" path="res://assets/textures/widgets/letters/letterI.png" id="7_jsbjd"]
[ext_resource type="Texture2D" uid="uid://vjyjngb1ybto" path="res://assets/textures/widgets/letters/letterG.png" id="8_fx0lt"]
[ext_resource type="Texture2D" uid="uid://btwl1xoqnuixv" path="res://assets/textures/widgets/letters/letterL.png" id="9_h6h2x"]
[ext_resource type="Texture2D" uid="uid://bu45n00mh538b" path="res://assets/textures/widgets/letters/letterS.png" id="10_w0ung"]
[ext_resource type="Texture2D" uid="uid://bq8acldburxay" path="res://assets/textures/widgets/letters/letterT.png" id="11_oa5c5"]
[ext_resource type="PackedScene" uid="uid://dtj3u1aufd5wj" path="res://src/widgets/w_rank.tscn" id="12_t8waw"]
[ext_resource type="Texture2D" uid="uid://bs67ypxaa05ql" path="res://assets/textures/widgets/icons/medalGold.png" id="13_jlsb5"]
[ext_resource type="Texture2D" uid="uid://bjruvwxi017qv" path="res://assets/textures/widgets/icons/medalSilver.png" id="14_ilo4c"]
[ext_resource type="Texture2D" uid="uid://co6olb4lv4k6p" path="res://assets/textures/widgets/icons/medalBronze.png" id="15_ki7ke"]
[ext_resource type="Texture2D" uid="uid://cf4urcy4ejis2" path="res://assets/textures/widgets/others/yellow_button00.png" id="16_ia8mg"]

[sub_resource type="LabelSettings" id="LabelSettings_mqq00"]
font_size = 15
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="w_rank_popup" type="MarginContainer"]
custom_minimum_size = Vector2(300, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3gm06")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_11sh7")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_bgxop")
expand_mode = 3
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_qv7sh")
expand_mode = 3
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
texture = ExtResource("5_shcom")
expand_mode = 3
stretch_mode = 5

[node name="TextureRect4" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
texture = ExtResource("6_u3dqc")
expand_mode = 3
stretch_mode = 5

[node name="TextureRect5" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
texture = ExtResource("7_jsbjd")
expand_mode = 3
stretch_mode = 5

[node name="TextureRect6" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
texture = ExtResource("5_shcom")
expand_mode = 3
stretch_mode = 5

[node name="TextureRect7" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
texture = ExtResource("8_fx0lt")
expand_mode = 3
stretch_mode = 5

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer4"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_constants/separation = 0
alignment = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer4/HBoxContainer"]
layout_mode = 2
texture = ExtResource("9_h6h2x")
expand_mode = 3
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer4/HBoxContainer"]
layout_mode = 2
texture = ExtResource("7_jsbjd")
expand_mode = 3
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer4/HBoxContainer"]
layout_mode = 2
texture = ExtResource("10_w0ung")
expand_mode = 3
stretch_mode = 5

[node name="TextureRect4" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer4/HBoxContainer"]
layout_mode = 2
texture = ExtResource("11_oa5c5")
expand_mode = 3
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="RankContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="w_rank" parent="MarginContainer/VBoxContainer/MarginContainer/RankContainer" instance=ExtResource("12_t8waw")]
layout_mode = 2
medal_texture = ExtResource("13_jlsb5")

[node name="w_rank2" parent="MarginContainer/VBoxContainer/MarginContainer/RankContainer" instance=ExtResource("12_t8waw")]
layout_mode = 2
medal_texture = ExtResource("14_ilo4c")

[node name="w_rank3" parent="MarginContainer/VBoxContainer/MarginContainer/RankContainer" instance=ExtResource("12_t8waw")]
layout_mode = 2
medal_texture = ExtResource("15_ki7ke")

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="btn_confirm" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("16_ia8mg")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer3/btn_confirm"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "confirm"
label_settings = SubResource("LabelSettings_mqq00")
horizontal_alignment = 1
vertical_alignment = 1
